--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,4 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12.23", features = ["json"] }
+rose-bound = { git = "https://github.com/gzordrai/rose-bound.git", branch = "main" }
